# cosc422-ass2

./: .gitignore  ArmyPilot.cpp  CMakeLists.txt  Dwarf.cpp  Mannequin.cpp  ModelViewer.cpp  assimp_extras.h
